--- a/packaging/generic-deb/debian/changelog
+++ b/packaging/generic-deb/debian/changelog
@@ -1,3 +1,9 @@
+amazon-ecs-init (1.50.0-2) stable; urgency=medium
+
+  * test
+
+  -- Feng Xiong <fenxiong@amazon.com>  Fri, 22 Jan 2021 11:54:00 +0000
+
 amazon-ecs-init (1.50.0-1) stable; urgency=medium
 
   * Cache Agent version 1.50.0
